T-2: Create dish card and few other necessary components

--- a/src/components/landing-page/LandingPage.scss
+++ b/src/components/landing-page/LandingPage.scss
@@ -1,3 +1,4 @@
+@import './src/styles/variables';
 @import './src/styles/shared';
 
 .landing-page-container {
@@ -6,5 +7,15 @@
   .settings-paper {
     width: 300px;
     height: 70px;
+  }
+
+  .display-manager {
+    width: $navbar-width;
+    position: absolute;
+    box-sizing: border-box;
+    top: $page-offset;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 1000;
   }
 }
