--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,12 @@
 $navbar-height: 70px;
+$navbar-width: 85vw;
+$display-manager-height: 60px;
 
 $scanner-border-radius: 10px;
 $max-scanner-height: 100vh;
 $qr-borders-vertical-offset: 25%;
 $qr-borders-horizontal-offset: 20%;
 $qr-canvas-initial-width: 500px;
+
+$page-offset: 10px;
+$dish-card-spacing: 10px;
