--- a/src/components/dishes/dish-card/DishCard.scss
+++ b/src/components/dishes/dish-card/DishCard.scss
@@ -1,30 +1,55 @@
+@import './src/styles/variables';
+
 .dish-card-container {
   box-sizing: border-box;
+  flex-direction: column;
+  display: flex;
   padding: 10px;
+  justify-content: flex-end;
+
+  * {
+    box-sizing: border-box;
+  }
 
   .dish-image {
-    border-radius: 5px;
-    height: 50%;
+    border-radius: $dish-card-inner-border-radius;
     margin-bottom: 10px;
+    flex-grow: 1;
+    height: 50%;
   }
 
   .ingredients-list {
-    box-sizing: border-box;
+    overflow: hidden;
+    padding: 3px;
+    margin-bottom: 10px;
   }
 
-  .dish-name, .dish-recipe {
-    padding: 0.5em;
-    width: 90%;
-    box-sizing: border-box;
-    margin: 0 auto;
+  .ingredients-list, .dish-name {
+    background-color: rgba(128, 128, 128, 0.075);
+    border-radius: $dish-card-inner-border-radius;
+    width: 100%;
   }
 
   .dish-name {
-    font-size: 1.25em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding: 0.5em;
+    margin: 0 auto;
+    font-size: 1.2em;
+    font-weight: bold;
+    overflow: hidden;
+  }
+
+  .show-details-button {
+    width: 100%;
+    border-radius: $dish-card-inner-border-radius;
     font-weight: bold;
   }
 
-  .dish-recipe {
-    font-size: 0.9em;
+  .ratings-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 15px;
   }
 }
