--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -1,6 +1,8 @@
 .ingredient-list-container {
+  height: fit-content;
+
   .ingredient-tile {
-    transform: scale(0.85);
-    margin: 2px;
+    transform: scale(0.75);
+    margin: 1px;
   }
 }
