--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -1,8 +1,30 @@
 .ingredient-list-container {
   height: fit-content;
+  width: 100%;
 
   .ingredient-tile {
-    transform: scale(0.75);
+    height: 3vh;
+    transform: scale(0.9);
     margin: 1px;
+  }
+
+  .servings-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 10px;
+
+    .servings-text {
+      font-weight: bold;
+      font-size: 0.9rem;
+      margin-right: 10px;
+    }
+  }
+
+  .ingredients-divider {
+    margin: 10px auto;
+    width: 90%;
   }
 }
