--- a/src/components/dishes/dishes-list/DishesList.scss
+++ b/src/components/dishes/dishes-list/DishesList.scss
@@ -1,13 +1,11 @@
 @import './src/styles/variables';
+@import './src/styles/shared';
 
 .dishes-list-container {
   box-sizing: border-box;
 
   .dish-card {
-    width: 90vw;
-    height: calc(100 * var(--vh) - #{$navbar-height} - calc(2 * #{$dish-card-spacing}) - calc(2 * #{$page-offset}) - #{$display-manager-height});
-    margin-top: calc(#{$display-manager-height} + #{$page-offset} + #{$dish-card-spacing});
-    box-sizing: border-box;
+    @include dish-card;
   }
 
   &.error {
