--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -1,3 +1,55 @@
+@import './src/styles/variables';
+
 .ingredient-tile-container {
   font-weight: bold;
+  background-color: $strong-highlighted-background;
+  padding: 0 10px;
+  border-radius: 50px;
+  box-sizing: border-box;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+
+  .ingredient-name, .ingredient-amount, .ingredient-unit {
+    font-size: 0.75rem;
+    width: fit-content;
+  }
+
+  .ingredient-amount {
+    margin-left: 0.25rem;
+  }
+}
+
+.ingredients-edit-dialog {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .divider {
+    margin: 10px auto;
+    width: 90%;
+  }
+
+  .ingredients-edit-dialog-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 75vw;
+
+    .action-button {
+      border-radius: 50px;
+      margin: 5px auto;
+      height: 30px;
+    }
+
+    .name-label {
+      margin-right: 10px;
+      opacity: 0.5;
+    }
+
+    .edit-field, .name-label {
+      font-size: 0.85rem;
+    }
+  }
 }
