--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -1,11 +1,12 @@
+@import './src/styles/shared';
+
 .ingredient-list-container {
-  height: fit-content;
   width: 100%;
 
   .ingredient-tile {
     height: 3vh;
     transform: scale(0.9);
-    margin: 1px;
+    @include appear-animation;
   }
 
   .servings-container {
