--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,11 @@
 $navbar-height: 70px;
-$navbar-width: 85vw;
+$navbar-width: 85vmin;
+$page-width: 90vmin;
 $display-manager-height: 60px;
-
-$scanner-border-radius: 10px;
-$max-scanner-height: 100vh;
-$qr-borders-vertical-offset: 25%;
-$qr-borders-horizontal-offset: 20%;
-$qr-canvas-initial-width: 500px;
 
 $page-offset: 10px;
 $dish-card-spacing: 10px;
 $dish-card-inner-border-radius: 5px;
+
+$highlighted-background: rgba(128, 128, 128, 0.075);
+$strong-highlighted-background: rgba(128, 128, 128, 0.25);
