T-10: Refactor, better error handling, color changes

--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -43,12 +43,12 @@
       height: 30px;
     }
 
-    .name-label {
+    .field-name-label {
       margin-right: 10px;
       opacity: 0.5;
     }
 
-    .edit-field, .name-label {
+    .editable-text-field, .field-name-label {
       font-size: 0.85rem;
     }
   }
