--- a/src/components/dishes/dish-image/DishImage.scss
+++ b/src/components/dishes/dish-image/DishImage.scss
@@ -14,6 +14,7 @@
     height: 100%;
     display: flex;
     z-index: 20;
+    opacity: 0;
   }
 
   .edit-icon-container {
@@ -34,11 +35,13 @@
     border-radius: $dish-card-inner-border-radius;
 
     .edit-icon {
+      color: white;
       font-size: 3rem;
       margin: 0 auto;
     }
 
     .edit-info {
+      color: white;
       width: 80%;
     }
   }
