T-12: Possibility to add new recipes

--- a/src/components/dishes/dish-card/DishCardShared.scss
+++ b/src/components/dishes/dish-card/DishCardShared.scss
@@ -16,6 +16,17 @@
     box-sizing: border-box;
   }
 
+  .field-label {
+    font-size: 0.5rem;
+    margin: 5px auto 0 auto;
+    transform: translateY(50%);
+
+    &:before, &:after {
+      border-radius: $dish-card-inner-border-radius;
+      border-top: thin solid rgba(128, 128, 128, 0.1);
+    }
+  }
+
   .dish-name {
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -38,6 +49,7 @@
     .dish-image {
       height: 100%;
       margin-bottom: 10px;
+      background-color: $strong-highlighted-background;
     }
   }
 
