T-14: Dishes can be filtered by tag

--- a/src/components/landing-page/display-manager/DisplayManager.scss
+++ b/src/components/landing-page/display-manager/DisplayManager.scss
@@ -3,19 +3,15 @@
 .display-manager-container {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 80vw;
   height: $display-manager-height;
   border-radius: 15px;
 
-  .action-button {
-    color: white;
+  .selected-tag {
     height: 100%;
-    display: flex;
-    flex-direction: column;
-
-    .action-button-label {
-      font-size: 0.65rem;
-    }
+    flex-grow: 1;
+    background-color: $highlighted-background;
   }
 
   .MuiToggleButton-root {
