--- a/src/components/settings-page/SettingsPage.scss
+++ b/src/components/settings-page/SettingsPage.scss
@@ -1,11 +1,15 @@
 @import './src/styles/shared';
+@import './src/styles/variables';
 
 .settings-page-container {
   @include page-container;
 
-  .settings-paper {
-    width: 300px;
-    height: 70px;
-    margin-bottom: 30px;
+  .settings-panel {
+    width: 90vw;
+    height: calc(100 * var(--vh) - #{$navbar-height} - calc(2 *  #{$dish-card-spacing}) - calc(2 * #{$page-offset}));
+    margin-bottom: calc(#{$navbar-height} + #{$page-offset});
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: $dish-card-spacing
   }
 }
