--- a/src/components/settings-page/settings-panel/SettingsPanel.scss
+++ b/src/components/settings-page/settings-panel/SettingsPanel.scss
@@ -31,5 +31,10 @@
       height: 100%;
       width: 100%;
     }
+
+    .tags-management-panel {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
