--- a/src/components/landing-page/display-manager/DisplayManager.scss
+++ b/src/components/landing-page/display-manager/DisplayManager.scss
@@ -4,22 +4,44 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 80vw;
   height: $display-manager-height;
   border-radius: 15px;
 
+  .search-bar {
+    flex: 1;
+    height: calc(#{$display-manager-height} - 10px);
+    background-color: $highlighted-background;
+    margin: 5px;
+    box-sizing: border-box;
+  }
+
   .selected-tag {
-    min-width: 100px;
+    min-width: 70px;
     height: $display-manager-height;
     padding: 10px;
-    background-color: $highlighted-background;
     box-sizing: border-box;
+  }
+
+  .back-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    box-sizing: border-box;
+
+    .back-button-icon {
+
+    }
+
+    .back-button-label {
+      font-size: 0.8rem;
+    }
   }
 
   .MuiToggleButton-root {
     color: white;
     height: $display-manager-height;
-    aspect-ratio: 1;
 
     &.Mui-selected {
       opacity: 0.5;
