--- a/src/components/tags/displayed-tag/DisplayedTag.scss
+++ b/src/components/tags/displayed-tag/DisplayedTag.scss
@@ -2,23 +2,23 @@
 
 .displayed-tag-container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 
   .displayed-tag-icon {
-    margin-right: 10px;
     font-size: 1.25rem;
   }
 }
 
 .holder {
-  position: relative;
-
   .selectable-tags-list {
     top: calc(#{$display-manager-height} + 5px);
+    left: 0;
     position: absolute;
     border-radius: 10px;
-    min-width: 70vw;
+    width: 100%;
 
     .tags-list-header {
       display: flex;
@@ -26,10 +26,11 @@
       .tags-search-input {
         font-weight: bold;
         flex-grow: 1;
+        margin-left: 10px;
       }
 
       .tags-list-header-icon {
-        margin: 0 auto;
+        min-width: fit-content;
       }
     }
 
