--- a/src/components/dishes/dish-tags/DishTags.scss
+++ b/src/components/dishes/dish-tags/DishTags.scss
@@ -1,4 +1,5 @@
 @import './src/styles/variables';
+@import './src/styles/shared';
 
 .tags-list-dialog {
   .tags-select-form {
@@ -39,17 +40,11 @@
 .tags-list-container, .tags-list-dialog {
   padding: $dish-card-spacing;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 
   .tag-chip {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 3px;
-    font-size: 0.6rem;
-    background-color: $strong-highlighted-background;
-    padding: 5px 10px;
-    border-radius: 50px;
+    @include tag-chip;
 
     .tags-edit-icon {
       height: 0.6rem;
