--- a/src/components/landing-page/LandingPage.scss
+++ b/src/components/landing-page/LandingPage.scss
@@ -4,13 +4,7 @@
 .landing-page-container {
   @include page-container;
 
-  .display-manager {
-    width: $navbar-width;
-    position: absolute;
-    box-sizing: border-box;
-    top: $page-offset;
-    left: 50%;
-    transform: translate(-50%, 0);
-    z-index: 1000;
+  .top-navbar {
+    @include navbar;
   }
 }
