--- a/src/components/navbars/bottom-navbar/BottomNavbar.scss
+++ b/src/components/navbars/bottom-navbar/BottomNavbar.scss
@@ -1,6 +1,6 @@
 @import './src/styles/variables';
 
-.navbar-container {
+.bottom-navbar-container {
   width: $navbar-width;
   height: $navbar-height;
   position: absolute;
@@ -9,10 +9,6 @@
   left: 50%;
   transform: translate(-50%, 0);
   z-index: 1000;
-
-  -webkit-box-shadow: 0px -5px 5px -1px rgba(13, 17, 80, 0.05);
-  -moz-box-shadow: 0px -5px 5px -1px rgba(13, 17, 80, 0.05);
-  box-shadow: 0px -5px 5px -1px rgba(13, 17, 80, 0.05);
 
   .MuiBottomNavigation-root {
     border-radius: 20px;
@@ -29,7 +25,6 @@
     .MuiBottomNavigationAction-label {
       font-weight: 600;
       margin-top: 5px;
-      letter-spacing: 2px;
       font-size: 0.7rem;
     }
 
@@ -42,10 +37,5 @@
         transform: scaleX(-1) scale(1.3);
       }
     }
-  }
-
-  .divider {
-    height: 70%;
-    margin: auto 0;
   }
 }
