--- a/src/components/dishes/dish-card/dish-card-front/DishCardFront.scss
+++ b/src/components/dishes/dish-card/dish-card-front/DishCardFront.scss
@@ -10,22 +10,13 @@
     flex-grow: 1;
   }
 
-  .content-container {
+  .dish-card-content-container {
     .ingredients-list {
-      margin-bottom: 10px;
-    }
-
-    .ratings-container {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      padding: 15px;
+      margin-bottom: $standard-element-spacing;
     }
   }
 
   .flip-card-button {
-    width: 100%;
-    border-radius: $dish-card-inner-border-radius;
-    font-weight: bold;
+    @include dish-card-action-button;
   }
 }
