--- a/src/components/dishes/dish-tags/DishTags.scss
+++ b/src/components/dishes/dish-tags/DishTags.scss
@@ -1,19 +1,19 @@
 @import './src/styles/variables';
 @import './src/styles/shared';
 
-.tags-list-dialog {
-  .tags-select-form {
-    padding: $dish-card-spacing;
+.dish-tags-list-dialog {
+  .dish-tags-select-form {
+    padding: $standard-element-spacing;
     text-align: center;
 
     .error-image {
       width: 50vw;
-      margin-bottom: 20px;
+      margin-bottom: $big-element-spacing;
     }
 
     .tags-select-info {
-      font-size: 0.9rem;
-      margin-bottom: $dish-card-spacing;
+      font-size: $standard-font-size;
+      margin-bottom: $standard-element-spacing;
     }
 
     .tags-select-buttons {
@@ -23,13 +23,13 @@
 
       .action-button {
         width: fit-content;
-        margin: $dish-card-spacing auto 0 auto;
+        margin: $standard-element-spacing auto 0 auto;
       }
     }
   }
 }
 
-.tags-select-menu {
+.dish-tags-select-menu {
   max-height: 35vh;
 
   .MuiMenuItem-root {
@@ -37,18 +37,18 @@
   }
 }
 
-.tags-list-container, .tags-list-dialog {
-  padding: $dish-card-spacing;
+.dish-tags-list-container, .dish-tags-list-dialog {
+  padding: $standard-element-spacing;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 
-  .tag-chip {
+  .dish-tag-chip {
     @include tag-chip;
 
-    .tags-edit-icon {
+    .dish-tags-edit-icon {
       height: 0.6rem;
-      margin-right: 5px;
+      margin-right: $small-element-spacing;
     }
   }
 }
