--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -3,15 +3,15 @@
 .ingredient-tile-container {
   font-weight: bold;
   background-color: $strong-highlighted-background;
-  padding: 0 10px;
-  border-radius: 50px;
+  padding: 0 $standard-element-spacing;
+  border-radius: $round-border-radius-50;
   box-sizing: border-box;
   display: inline-flex;
   flex-direction: row;
   align-items: center;
 
   .ingredient-name, .ingredient-amount, .ingredient-unit {
-    font-size: 0.75rem;
+    font-size: $tiny-font-size;
     width: fit-content;
   }
 
@@ -21,13 +21,13 @@
 }
 
 .ingredients-edit-dialog {
-  padding: 15px;
+  padding: $standard-element-spacing;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   .divider {
-    margin: 10px auto;
+    margin: $standard-element-spacing auto;
     width: 90%;
   }
 
@@ -38,18 +38,18 @@
     width: 75vw;
 
     .action-button {
-      border-radius: 50px;
-      margin: 5px auto;
+      border-radius: $round-border-radius-50;
+      margin: $small-element-spacing auto;
       height: 30px;
     }
 
     .field-name-label {
-      margin-right: 10px;
+      margin-right: $standard-element-spacing;
       opacity: 0.5;
     }
 
     .editable-text-field, .field-name-label {
-      font-size: 0.85rem;
+      font-size: $standard-font-size;
     }
   }
 }
