--- a/src/components/tags/tags-management-panel/TagsManagementPanel.scss
+++ b/src/components/tags/tags-management-panel/TagsManagementPanel.scss
@@ -3,7 +3,7 @@
 
 .MuiList-root {
   .MuiMenuItem-root {
-    font-size: 0.8rem;
+    font-size: $small-font-size;
   }
 }
 
@@ -13,7 +13,7 @@
   position: relative;
 
   .divider {
-    font-size: 0.85rem;
+    font-size: $standard-font-size;
     font-weight: 600;
   }
 
@@ -25,8 +25,8 @@
     .tags-tab-text {
       .info {
         text-align: justify;
-        font-size: 0.7rem;
-        padding: $dish-card-spacing;
+        font-size: $small-font-size;
+        padding: $standard-element-spacing;
       }
 
       .requirements {
@@ -37,7 +37,7 @@
     }
 
     .tags-tab-content {
-      padding: $dish-card-spacing;
+      padding: $standard-element-spacing;
 
       .tag-inputs-container {
         display: flex;
@@ -50,13 +50,13 @@
 
         .tag-name-input {
           height: 100%;
-          font-size: 0.8rem;
+          font-size: $standard-font-size;
           flex-grow: 1;
         }
       }
 
       .selected-tag {
-        font-size: 0.9rem;
+        font-size: $standard-font-size;
         font-weight: 600;
       }
 
@@ -66,7 +66,7 @@
       }
 
       .tags-divider {
-        font-size: 0.5rem;
+        font-size: $tiny-font-size;
         margin-top: 25px;
       }
 
